@@ -14607,7 +14607,7 @@ Subject length lower bound = 65535
 Capture group count = 1
 Max back reference = 1
 Starting code units: a b 
-Subject length lower bound = 0
+Subject length lower bound = 1
 
 /(?|(aaa)|(b))(?1)/I
 Capture group count = 1
@@ -14625,7 +14625,7 @@ Max back reference = 1
 Named capture groups:
   a   1
 Starting code units: a b 
-Subject length lower bound = 0
+Subject length lower bound = 1
 
 /(?|(?'a'aaa)|(?'a'b))(?'a'cccc)\k'a'/I,dupnames
 Capture group count = 2
@@ -14636,7 +14636,7 @@ Named capture groups:
 Options: dupnames
 Starting code units: a b 
 Last code unit = 'c'
-Subject length lower bound = 1
+Subject length lower bound = 5
 
 /ab{3cd/
     ab{3cd
